[project]
name = "nonlinearcontrol"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.7,<4.0.0)",
    "sympy (>=1.14.0,<2.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "casadi (>=3.7.2,<4.0.0)",
    "do-mpc (>=5.1.1,<6.0.0)",
    "control (>=0.10.2,<0.11.0)",
    "pygad (>=3.5.0,<4.0.0)",
]

[tool.poetry]
packages = [{include = "nonlinearcontrol", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
